# vulnpeek

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vulnpeek/: __init__.py  cli.py  osv.py  requirements.py
tests/: test_vulnpeek.py
