[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulnpeek"
version = "0.1.0"
description = "Lightweight CLI to scan Python dependencies for known vulnerabilities via the OSV API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Jonathan Laporte" }]
keywords = ["security", "vulnerability", "scanner", "osv", "dependencies", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["httpx>=0.24", "rich>=13.0"]

[project.scripts]
vulnpeek = "vulnpeek.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-httpx>=0.21", "respx>=0.20", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/jlaportebot/vulnpeek"
Repository = "https://github.com/jlaportebot/vulnpeek"
Issues = "https://github.com/jlaportebot/vulnpeek/issues"
